--- a/assets/scss/component.scss
+++ b/assets/scss/component.scss
@@ -113,7 +113,7 @@ table {
   }
   &.common-table{
     width: 100%;
-    margin: 50px auto;
+    margin: 50px auto 0;
     border-collapse: collapse; //표에 띄워진 부분을 붙여주는것!
     text-align: center; //내꺼
     th,td {
